Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-17062

Test failure on galera.MW-336

    XMLWordPrintable

Details

    Description

      galera.MW-336 'innodb'                   w3 [ fail ]
              Test ended at 2018-08-24 01:18:05
       
      CURRENT_TEST: galera.MW-336
      --- /usr/share/mysql-test/suite/galera/r/MW-336.result	2018-08-24 00:47:16.000000000 +0000
      +++ /dev/shm/var/3/log/MW-336.reject	2018-08-24 01:18:04.741813892 +0000
      @@ -2,11 +2,63 @@
       connection node_1;
       SET GLOBAL wsrep_slave_threads = 10;
       SET GLOBAL wsrep_slave_threads = 1;
      +Timeout in wait_condition.inc for SELECT COUNT(*) = 11 FROM INFORMATION_SCHEMA.PROCESSLIST WHERE USER = 'system user' AND (STATE IS NULL OR STATE NOT LIKE 'InnoDB%');
      +Id	User	Host	db	Command	Time	State	Info	Progress
      +1	system user		NULL	Sleep	97	WSREP aborter idle	NULL	0.000
      +2	system user		NULL	Sleep	40	Committed 994	NULL	0.000
      +3	system user		NULL	Daemon	NULL	InnoDB purge worker	NULL	0.000
      +4	system user		NULL	Daemon	NULL	InnoDB purge worker	NULL	0.000
      +5	system user		NULL	Daemon	NULL	InnoDB purge worker	NULL	0.000
      +6	system user		NULL	Daemon	NULL	InnoDB purge coordinator	NULL	0.000
      +7	system user		NULL	Daemon	NULL	InnoDB shutdown handler	NULL	0.000
      +80	root	localhost	test	Sleep	32		NULL	0.000
      +81	root	localhost:38223	test	Query	0	Init	show full processlist	0.000
      +82	system user		NULL	Sleep	30	NULL	NULL	0.000
      +83	system user		NULL	Sleep	30	NULL	NULL	0.000
      +84	system user		NULL	Sleep	30	NULL	NULL	0.000
      +85	system user		NULL	Sleep	30	NULL	NULL	0.000
      +86	system user		NULL	Sleep	30	NULL	NULL	0.000
      +87	system user		NULL	Sleep	30	NULL	NULL	0.000
      +88	system user		NULL	Sleep	30	NULL	NULL	0.000
      +89	system user		NULL	Sleep	30	NULL	NULL	0.000
      +90	system user		NULL	Sleep	30	NULL	NULL	0.000
      +91	system user		NULL	Sleep	30	NULL	NULL	0.000
       connection node_2;
       INSERT INTO t1 VALUES (1);
       connection node_1;
       SET GLOBAL wsrep_slave_threads = 10;
       SET GLOBAL wsrep_slave_threads = 20;
      +Timeout in wait_condition.inc for SELECT COUNT(*) = 21 FROM INFORMATION_SCHEMA.PROCESSLIST WHERE USER = 'system user' AND (STATE IS NULL OR STATE NOT LIKE 'InnoDB%');
      +Id	User	Host	db	Command	Time	State	Info	Progress
      +1	system user		NULL	Sleep	128	WSREP aborter idle	NULL	0.000
      +3	system user		NULL	Daemon	NULL	InnoDB purge worker	NULL	0.000
      +4	system user		NULL	Daemon	NULL	InnoDB purge worker	NULL	0.000
      +5	system user		NULL	Daemon	NULL	InnoDB purge worker	NULL	0.000
      +6	system user		NULL	Daemon	NULL	InnoDB purge coordinator	NULL	0.000
      +7	system user		NULL	Daemon	NULL	InnoDB shutdown handler	NULL	0.000
      +80	root	localhost	test	Sleep	62		NULL	0.000
      +81	root	localhost:38223	test	Query	0	Init	show full processlist	0.000
      +82	system user		NULL	Sleep	60	NULL	NULL	0.000
      +83	system user		NULL	Sleep	60	NULL	NULL	0.000
      +84	system user		NULL	Sleep	60	NULL	NULL	0.000
      +85	system user		NULL	Sleep	60	NULL	NULL	0.000
      +86	system user		NULL	Sleep	60	NULL	NULL	0.000
      +87	system user		NULL	Sleep	60	NULL	NULL	0.000
      +88	system user		NULL	Sleep	60	NULL	NULL	0.000
      +89	system user		NULL	Sleep	60	NULL	NULL	0.000
      +90	system user		NULL	Sleep	60	NULL	NULL	0.000
      +91	system user		NULL	Sleep	60	NULL	NULL	0.000
      +92	system user		NULL	Sleep	30	NULL	NULL	0.000
      +95	system user		NULL	Sleep	30	NULL	NULL	0.000
      +93	system user		NULL	Sleep	30	NULL	NULL	0.000
      +94	system user		NULL	Sleep	30	NULL	NULL	0.000
      +96	system user		NULL	Sleep	30	NULL	NULL	0.000
      +97	system user		NULL	Sleep	30	NULL	NULL	0.000
      +98	system user		NULL	Sleep	30	NULL	NULL	0.000
      +100	system user		NULL	Sleep	30	NULL	NULL	0.000
      +101	system user		NULL	Sleep	30	NULL	NULL	0.000
      +99	system user		NULL	Sleep	30	NULL	NULL	0.000
      +102	system user		NULL	Sleep	30	NULL	NULL	0.000
       SET GLOBAL wsrep_slave_threads = 1;
       connection node_2;
       INSERT INTO t1 VALUES (1);
      @@ -19,6 +71,28 @@
       INSERT INTO t1 VALUES (8);
       INSERT INTO t1 VALUES (9);
       connection node_1;
      +Timeout in wait_condition.inc for SELECT COUNT(*) = 12 FROM INFORMATION_SCHEMA.PROCESSLIST WHERE USER = 'system user' AND (STATE IS NULL OR STATE NOT LIKE 'InnoDB%');
      +Id	User	Host	db	Command	Time	State	Info	Progress
      +1	system user		NULL	Sleep	158	WSREP aborter idle	NULL	0.000
      +3	system user		NULL	Daemon	NULL	InnoDB purge worker	NULL	0.000
      +4	system user		NULL	Daemon	NULL	InnoDB purge worker	NULL	0.000
      +5	system user		NULL	Daemon	NULL	InnoDB purge worker	NULL	0.000
      +6	system user		NULL	Daemon	NULL	InnoDB purge coordinator	NULL	0.000
      +7	system user		NULL	Daemon	NULL	InnoDB shutdown handler	NULL	0.000
      +80	root	localhost	test	Sleep	92		NULL	0.000
      +81	root	localhost:38223	test	Query	0	Init	show full processlist	0.000
      +91	system user		NULL	Sleep	90	NULL	NULL	0.000
      +92	system user		NULL	Sleep	60	NULL	NULL	0.000
      +95	system user		NULL	Sleep	60	NULL	NULL	0.000
      +93	system user		NULL	Sleep	60	NULL	NULL	0.000
      +94	system user		NULL	Sleep	60	NULL	NULL	0.000
      +96	system user		NULL	Sleep	60	NULL	NULL	0.000
      +97	system user		NULL	Sleep	60	NULL	NULL	0.000
      +98	system user		NULL	Sleep	60	NULL	NULL	0.000
      +100	system user		NULL	Sleep	60	NULL	NULL	0.000
      +101	system user		NULL	Sleep	60	NULL	NULL	0.000
      +99	system user		NULL	Sleep	60	NULL	NULL	0.000
      +102	system user		NULL	Sleep	60	NULL	NULL	0.000
       SET GLOBAL wsrep_slave_threads = 10;
       SET GLOBAL wsrep_slave_threads = 0;
       Warnings:
      @@ -36,5 +110,17 @@
       INSERT INTO t1 VALUES (19);
       INSERT INTO t1 VALUES (20);
       connection node_1;
      +Timeout in wait_condition.inc for SELECT COUNT(*) = 2 FROM INFORMATION_SCHEMA.PROCESSLIST WHERE USER = 'system user' AND (STATE IS NULL OR STATE NOT LIKE 'InnoDB%');
      +Id	User	Host	db	Command	Time	State	Info	Progress
      +1	system user		NULL	Sleep	188	WSREP aborter idle	NULL	0.000
      +3	system user		NULL	Daemon	NULL	InnoDB purge worker	NULL	0.000
      +4	system user		NULL	Daemon	NULL	InnoDB purge worker	NULL	0.000
      +5	system user		NULL	Daemon	NULL	InnoDB purge worker	NULL	0.000
      +6	system user		NULL	Daemon	NULL	InnoDB purge coordinator	NULL	0.000
      +7	system user		NULL	Daemon	NULL	InnoDB shutdown handler	NULL	0.000
      +80	root	localhost	test	Sleep	122		NULL	0.000
      +81	root	localhost:38223	test	Query	0	Init	show full processlist	0.000
      +98	system user		NULL	Sleep	30	Committed 1030	NULL	0.000
      +100	system user		NULL	Sleep	90	NULL	NULL	0.000
       SET GLOBAL wsrep_slave_threads = 1;
       DROP TABLE t1;
      

      Attachments

        Issue Links

          Activity

            People

              stepan.patryshev Stepan Patryshev (Inactive)
              jplindst Jan Lindström (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3.5d
                  3.5d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.